--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@ The struggle led to a series of experiments which resulted in an epiphany discov
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/dMTH0zFvFww" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<i>I started with 20 episodes as poc and increased the size to 60 episodes which made the model reallly good. Then the moving jaw of so100 broke down and was replaced. I had to collect another 10 episodes to finetune the model to account for the differences caused by the new jaw. 
+<i>I started with 20 episodes as poc and increased the size to 60 episodes which made the model reallly good. Then the moving jaw of the so100 broke down and was replaced. I had to collect another 10 episodes to finetune the model to account for the differences caused by the new jaw. 
     <a href="https://huggingface.co/spaces/lerobot/visualize_dataset?path=%2Fpaszea%2Flekiwi_aug_grab">Dataset</a></i>
 <p>
-I was quite excited by the discovery since the model also generalized. It enabled me to easily build an agentic robot demo like the following without additional training. The robot chatted and fetched what's asked of it, and could recover from its failures.
+I was quite excited by the discovery since the model also generalized. It enabled me to easily build an agentic robot demo like the following without any additional training. The robot chatted and fetched what's asked of it, and could recover from its failures.
 
 <div class="video-container">
     <iframe width="325" height="560" src="https://www.youtube.com/embed/eOH3eSNxkfg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -141,12 +141,12 @@ I've been reading robotics papers along the way. At this point, I came across a 
 In-context learning still requires a few demonstrations. Could we do better without any demonstrations, as some Gemini Robotics demos did, zero-shot? Zero-shot sounded nice!
 </p>
 <p>
-To get zero-shot, I first had the idea of developing a simplified inverse kinematics (IK) model to move the robot's gripper to any given point in images. I had no idea how to manually craft such a model. But I can use AI to train a model that required no linear algebra or measurements. This X thread explains how it's done.
+To get zero-shot, I first had the idea of developing a simplified inverse kinematics (IK) model to move the robot's gripper to any given point in images. I had no idea how to manually craft such a model for so100. But I could use AI to train a model to do it for me, which required no linear algebras or measurements. This X thread explains how it's done.
 </p>
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">So100 costs $110. I has no fancy features. You control it by setting its 6-joint positions.<br><br>But you can develop a fancy feature, like a simplified IK to move the arm to an arbitrary position in images. See <a href="https://t.co/1ZzuOJEs4M">pic.twitter.com/1ZzuOJEs4M</a></p>&mdash; xun (@paszea) <a href="https://twitter.com/paszea/status/1932559764241994197?ref_src=twsrc%5Etfw">June 10, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 <p>
-With the help of the IK model and Gemini Live, I could finally have a "Hi Robot" moment for my so100 without any demonstration or training.
+With the help of the IK model and Gemini Live, I could finally have a "Hi Robot" moment for my so100 without any demonstration.
 </p>
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/zeroshot?src=hash&amp;ref_src=twsrc%5Etfw">#zeroshot</a> <a href="https://twitter.com/hashtag/so100?src=hash&amp;ref_src=twsrc%5Etfw">#so100</a><br>A robot that talks too much and pauses too often, yet performs tasks Zero Shot. No demonstration needed.<br><br>1/ Put things in a plate <a href="https://t.co/2Z26c4XUI9">pic.twitter.com/2Z26c4XUI9</a></p>&mdash; xun (@paszea) <a href="https://twitter.com/paszea/status/1933280906137240010?ref_src=twsrc%5Etfw">June 12, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
@@ -158,7 +158,7 @@ Below is another zero-shot demo where Gemini figured out "a point in front of Ke
 </div>
 
 <p>
-I used to find it quite amusing to watch pre-LLM era robots playing soccer. They were epically clumsy. But things have been changing fast. Impressive robot demos now pop up every day on Internet. 
+I used to find it quite amusing to watch pre-LLM era robots playing soccer. They were epically clumsy. But things have changed. Impressive robot demos now pop up every day on Internet. 
     
 Cloth folding, picnic packing, kitchen cleaning, needle threading, all terain dogs, dancing humanoids, you name it.
 </p>
